#cmake_minimum_required (2.6)
set( BIN multi_thread_test )
project (${BIN})
set( SOURCE_ROOT . )
aux_source_directory( ${SOURCE_ROOT} SOURCES )
include_directories( ${SOURCE_ROOT} )
#set( REQUIRED_LIBRARIES -thread)
set( CMAKE_CXX_FLAGS "-O2 -Wall -Werror -std=c++11 -lpthread -g3" )
add_executable( ${BIN} ${SOURCES} )
#target_link_libraries( ${BIN} ${REQUIRED_LIBRARIES} )
